[project]
name = "aiolemmy"
dynamic = ["version"]
description = "Async Lemmy API client"
authors = [
    {name = "Richard Schwab", email = "pythonaiolemmy-fw4mjeny5w@richardschwab.de"},
]
dependencies = [
    "aiohttp>=3.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[project.urls]
"CI: GitHub" = "https://github.com/Nothing4You/aiolemmy/actions"
"GitHub: repo" = "https://github.com/Nothing4You/aiolemmy"
"GitHub: issues" = "https://github.com/Nothing4You/aiolemmy/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "aiolemmy/_scm_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
build = [
    "build>=1.1.1",
    "twine>=5.0.0",
]
