[project]
name = "aiolemmy"
dynamic = ["version"]
description = "Async Lemmy API client"
authors = [
    {name = "Richard Schwab", email = "pythonaiolemmy-fw4mjeny5w@richardschwab.de"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "typing-extensions<5,>=4; python_version < \"3.11\"",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[project.urls]
"CI: GitHub" = "https://github.com/Nothing4You/aiolemmy/actions"
"GitHub: repo" = "https://github.com/Nothing4You/aiolemmy"
"GitHub: issues" = "https://github.com/Nothing4You/aiolemmy/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "aiolemmy/_scm_version.py"
write_template = "__version__ = '{}'"

[dependency-groups]
dev = [
    "build>=1.1.1",
    "twine>=5.0.0",
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "ANN401", # TODO: Remove/reduce Any usages
    "D", # TODO: Create docs
    "E501", # Handled by Black
    "EM101", # TODO: Implement custom exceptions
    "ERA001", # Prone to false positives
    "FIX002", # TODOs are allowed
    "TRY002", # TODO: Implement custom exceptions
    "TRY003", # TODO: Implement custom exceptions

    # Deprecated rules
    "ANN101",
    "ANN102",


    # TODO: review these
    "FBT001",
    "FBT002",
    "C901",
    "PLR0912",
    "PLR0913",
    "TD002",
    "TD003",
]

[tool.ty.rules]
division-by-zero = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"
